Now executes xelatex process